admin interface started, ummm

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,9 +1,9 @@
 <p><%= t 'hello', :user => @resource.nick %></p>
 
-<p><%= t 'passreset_mail', :site => Yettings.site_name %></p>
+<p><%= t 'passreset_mail', :site => Yetting.site_name %></p>
 
 <p><%= link_to t(:passreset_me), edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
 
 <p><%= t(:passreset_decline) %></p>
 
-<p><%= t 'email_signature_html', :team => Yettings.team_name %></p>
+<p><%= t 'email_signature_html', :team => Yetting.team_name %></p>
