--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,9 +1,9 @@
 <p><%= t 'welcome', :user => @resource.nick %></p>
 
-<p><%= t 'confirm_email', :site => Yettings.site_name %></p>
+<p><%= t 'confirm_email', :site => Yetting.site_name %></p>
 
 <p><%= link_to t(:confirm_me), confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %></p>
 
 <p><%= t(:confirm_decline) %></p>
 
-<p><%= t 'email_signature_html', :team => Yettings.team_name %></p>
+<p><%= t 'email_signature_html', :team => Yetting.team_name %></p>
