--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -10,7 +10,7 @@
   <div><%= f.label :password_confirmation, t(:new_passwd_confirmation) %><br />
   <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.submit t(:change_passwd) %></div>
+  <div><%= f.submit t(:change_password) %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
