--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 
 <footer>
   <div class="footer_text center">
-    <%= t 'footer_html', :team => '' %>
+    <%= t 'footer_html', :team => Yetting.team_name %>
     <p>
       Avaliable languages
       <% @localelist[0..-2].each do |locale| %>
