--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,4 +1,4 @@
-<h2><%= t(:resend_confirmation) %></h2>
+<h2><%= t 'common.actions.register.confirmation.retry' %></h2>
 
 <%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
@@ -6,7 +6,7 @@
   <div><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.submit t(:resend_confirmation) %></div>
+  <div><%= f.submit (t 'common.actions.register.confirmation.retry') %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
