--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,22 +1,26 @@
 <header class="siteheader">
   <div class="menu rightfloat">
     <% if @menulinks.empty? %>
-      <%= t(:no_avaliable_menulinks) %>
+      <%= t 'common.messages.errors.no_avaliable_menulinks' %>
     <% else %>
+      <% @menulinks[0..-2].each do |link| %>
+        <%= link_to link.title, "/#{link.url}/" %> |
+      <% end %>
+      <%= link_to @menulinks.last.title, "/#{@menulinks.last.url}/" %>
     <% end %>
   </div>
   <div class="userlinks rightfloat">
     <% if user_signed_in? %>
-      <%= t 'welcome', :user => @user.nick %>
+      <%= t 'common.greetings.welcome', :user => @user.nick %>
         <%= @user.id %>
       <%= link_to "[X]", destroy_user_session_path, :method => :delete %> |
       <% if current_user.admin? %>
-         <%= link_to t(:adminiface), admin_index_path %> |
+         <%= link_to (t 'admin.interface'), admin_index_path %> |
       <% end %>
-      <%= link_to t(:edit_registration), edit_user_registration_path %>
+      <%= link_to (t 'common.actions.edit', :obj => (t 'activerecord.attributes.user.registration')), edit_user_registration_path %>
     <% else %>
-      <%= link_to t(:register), new_user_registration_path %> |
-      <%= link_to t(:login), new_user_session_path %>
+      <%= link_to (t 'common.actions.register.register'), new_user_registration_path %> |
+      <%= link_to (t 'common.actions.login.login'), new_user_session_path %>
     <% end %>
   </div>
   <%= link_to Yetting.site_name, root_path, :class => 'logo' %>
