--- a/app/views/static_pages/stub.html.erb
+++ b/app/views/static_pages/stub.html.erb
@@ -1,8 +1,8 @@
-<% provide :title, t(:not_implemented) %>
+<% provide :title, (t 'common.errors.not_implemented.title' ) %>
 <header>
-  <h3><%= t(:not_implemented) %></h3>
+  <h3><%= t 'common.errors.not_implemented.title' %></h3>
 </header>
 
 <article>
-  <p><%= t(:not_implemented_yet) %></p>
+  <p><%= t 'common.errors.not_implemented.desc' %></p>
 </article>
