--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,9 @@
-<p>Hello <%= @resource.email %>!</p>
+<p><%= t 'common.greetings.hello', :user => @resource.nick %></p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p><%= t 'common.actions.login.locked.desc', :site => Yetting.site_name %></p>
 
-<p>Click the link below to unlock your account:</p>
+<p><%= link_to (t 'common.actions.login.locked.action'), unlock_url(@resource, :unlock_token => @resource.unlock_token) %></p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, :unlock_token => @resource.unlock_token) %></p>
+<p><%= t 'common.actions.login.locked.decline' %></p>
+
+<p><%= t 'common.footer.email_signature_html', :team => Yetting.team_name %></p>
