--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,16 +1,16 @@
-<h2><%= t(:change_passwd) %></h2>
+<h2><%= (t 'objects.password.changing') %></h2>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
   <%= f.hidden_field :reset_password_token %>
 
-  <div><%= f.label :password, t(:new_passwd) %><br />
+  <div><%= f.label :password, (t 'activerecord.attributes.user.new_password') %><br />
   <%= f.password_field :password, :autofocus => true %></div>
 
-  <div><%= f.label :password_confirmation, t(:new_passwd_confirmation) %><br />
+  <div><%= f.label :password_confirmation, (t 'activerecord.attributes.user.password_confirmation') %><br />
   <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.submit t(:change_password) %></div>
+  <div><%= f.submit  %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
