--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<h2><%= t(:forgot_passwd) %></h2>
+<h2><%= t 'common.actions.login.forgot_passwd.request' %></h2>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
@@ -6,7 +6,7 @@
   <div><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.submit t(:send_me_passwd) %></div>
+  <div><%= f.submit (t 'common.actions.request', :obj =>  (t 'activerecord.attributes.user.password_restore')) %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
