--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -1,17 +1,17 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to t(:login), new_session_path(resource_name) %><br />
+  <%= link_to (t 'common.actions.login.login'), new_session_path(resource_name) %><br />
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to t(:register), new_registration_path(resource_name) %><br />
+  <%= link_to (t 'common.actions.register.register'), new_registration_path(resource_name) %><br />
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
-  <%= link_to t(:forgot_password), new_password_path(resource_name) %><br />
+  <%= link_to (t 'common.actions.login.forgot_passwd.request'), new_password_path(resource_name) %><br />
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to t(:no_confirm_instructions), new_confirmation_path(resource_name) %><br />
+  <%= link_to (t 'common.actions.register.confirmation.missed'), new_confirmation_path(resource_name) %><br />
 <% end -%>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
