--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 <hr>
 <footer>
   <div class="footer_text center">
-    <%= t 'footer_html', :team => Yetting.team_name %>
+    <%= t 'common.footer.footer_html', :team => Yetting.team_name %>
     <p>
       Avaliable languages
       <% @localelist[0..-2].each do |locale| %>
