--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -10,7 +10,7 @@
   <div><%= f.label :password_confirmation, (t 'activerecord.attributes.user.password_confirmation') %><br />
   <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.submit  %></div>
+  <div><%= f.submit (t 'common.actions.edit', :obj => (t 'activerecord.attributes.user.password')) %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
