--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,27 +1,31 @@
 <h2><%= t 'common.actions.edit', :obj => (t 'activerecord.attributes.user.registration') %></h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
+    <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+    <div><%= f.label :email %><br />
+      <%= f.email_field :email, :autofocus => true %></div>
 
-  <% if resource.class.reconfirmable && resource.unconfirmed_email.present? %>
-    <div><%= t 'common.messages.footnotes.waiting_for_reconfirm' %> <%= resource.unconfirmed_email %></div>
-  <% end %>
+    <% if resource.class.reconfirmable && resource.unconfirmed_email.present? %>
+        <div><%= t 'common.messages.footnotes.waiting_for_reconfirm' %> <%= resource.unconfirmed_email %></div>
+    <% end %>
 
-  <div><%= f.label :password %> <i><%= t 'common.messages.help.keep_blank' %></i><br />
-  <%= f.password_field :password, :autocomplete => "off" %></div>
+    <div><%= f.label :password %> <i><%= t 'common.messages.help.keep_blank' %></i><br />
+      <%= f.password_field :password, :autocomplete => "off" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+    <div><%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.label :current_password %> <i><%= t 'common.messages.help.enter_your_passwd_for_confirm' %></i><br />
-  <%= f.password_field :current_password %></div>
+    <div><%= f.label :current_password %> <i><%= t 'common.messages.help.enter_your_passwd_for_confirm' %></i><br />
+      <%= f.password_field :current_password %></div>
 
-  <div><%= f.submit (t 'common.actions.update', :obj => (t 'activerecord.attributes.user.registration')) %></div>
+    <div><%= f.submit (t 'common.actions.update', :obj => (t 'activerecord.attributes.user.registration')) %></div>
 <% end %>
 
-<h3><%= t 'common.actions.ban.self' %></h3>
+<% unless current_user.admin %>
 
-<p><%= t 'common.messages.help.self_ban' %><%= link_to (t 'common.actions.ban.self'), registration_path(resource_name), :data => { :confirm => (t 'common.messages.warnings.are_you_sure') }, :method => :delete %>.</p>
+    <h3><%= t 'common.actions.ban.self' %></h3>
+
+    <p><%= t 'common.messages.help.self_ban' %><%= link_to (t 'common.actions.ban.self'), registration_path(resource_name), :data => { :confirm => (t 'common.messages.warnings.are_you_sure') }, :method => :delete %>.</p>
+
+<% end %>
