yettings goes away

--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -6,4 +6,4 @@
 
 <p><%= t 'common.actions.login.locked.decline' %></p>
 
-<p><%= t 'common.footer.email_signature_html', :team => Yetting.team_name %></p>
+<p><%= t 'common.footer.email_signature_html', :team => Personalisation.find(2).data %></p>
