--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,9 +1,9 @@
 <p><%= t 'common.greetings.welcome', :user => @resource.nick %></p>
 
-<p><%= t 'common.actions.register.confirmation.congratulations', :site => Yetting.site_name %></p>
+<p><%= t 'common.actions.register.confirmation.congratulations', :site => Personalisation.find(3).data %></p>
 
 <p><%= link_to (t 'common.actions.register.confirmation.action'), confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %></p>
 
 <p><%= (t 'common.actions.register.confirmation.decline') %></p>
 
-<p><%= t 'common.footer.email_signature_html', :team => Yetting.team_name %></p>
+<p><%= t 'common.footer.email_signature_html', :team => Personalisation.find(2).data %></p>
