--- a/app/views/forum/index.html.erb
+++ b/app/views/forum/index.html.erb
@@ -5,14 +5,47 @@
 </header>
 
 <article>
-  <ul>
-  <% @metaforums.each do |metaforum| %>
-    <li><%= "#{metaforum.title} — #{metaforum.desc}" %></li>
-      <ul>
-        <% metaforum.forums.ordered.each do |forum| %>
-          <li><p class="small"><%= link_to forum.title, forum_path(forum.url) %> — <%= forum.desc %></p></li>
+    <div class="forum_container">
+        <div class="forum">
+            Forum name
+        </div>
+        <div class="forum_posts">
+            Posts
+        </div>
+        <div class="forum_last_topic">
+            Last topic
+        </div>
+        <div class="clear"></div>
+        <% @metaforums.each do |metaforum| %>
+            <div class="metaforum">
+                <%= "#{metaforum.title}" %><br/ >
+                <%= "#{metaforum.desc}" %>
+            </div>
+            <% metaforum.forums.ordered.each do |forum| %>
+                <div class="forum_data">
+                    <div class="forum">
+                        <span class="forum_name"><%= link_to forum.title, forum_path(forum.url) %></span><br />
+                        <span class="forum_description"><%= forum.desc %></span>
+                    </div>
+                    <div class="forum_posts">
+                        <%= forum.posts.count %>
+                    </div>
+                    <% if forum.posts.count > 0 %>
+                        <div class="forum_last_topic">
+                            <img class="forum_index_avatar" src="<%= avatar_url(forum.posts.last.user) %>" />
+                            <a href="<%= forum_post_path(forum, forum.posts.last) %>"><%= forum.posts.last.subject %></a><br />
+                            <%= forum.posts.last.user.nick %><br />
+                            <%= l forum.posts.last.created_at, :format => :long %>
+                        </div>
+                    <% else %>
+                        <div class="forum_last_topic">
+                            Nothing here
+                        </div>
+                    <% end %>
+                </div>
+                <div class="clear"></div>
+            <% end %>
+        <div class="clear"></div>
         <% end %>
-      </ul>
-  <% end %>
-  </ul>
+    </div>
 </article>
