--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,10 +10,10 @@
       <%= image_tag avatar_url(@post.user) %>
     </div>
     <div class="user_data">
-          Group: {groupname}<br />
-          Posts: <%= @user.comments.count %><br />
-          Threads: <%= @user.posts.count %><br />
-          Thanks: {thankscount}<br />
+          <%= (t 'activerecord.attributes.user.group').mb_chars.capitalize.to_s %>: {groupname}<br>
+          <%= (t 'objects.comment.plural').mb_chars.capitalize.to_s %>: <%= @user.comments.count %><br>
+          <%= (t 'objects.post.plural').mb_chars.capitalize.to_s %>: <%= @user.posts.count %><br>
+          <%= (t 'objects.thanks.counted').mb_chars.capitalize.to_s %>: {thankscount}<br>
     </div>
   </div>
   <div class="message">
@@ -51,10 +51,10 @@
           <%= image_tag avatar_url(comment.user) %>
         </div>
         <div class="user_data">
-          Group: {groupname}<br />
-          Posts: <%= @user.comments.count %><br />
-          Threads: <%= @user.posts.count %><br />
-          Thanks: {thankscount}<br />
+          <%= (t 'activerecord.attributes.user.group').mb_chars.capitalize.to_s %>: {groupname}<br>
+          <%= (t 'objects.comment.plural').mb_chars.capitalize.to_s %>: <%= @user.comments.count %><br>
+          <%= (t 'objects.post.plural').mb_chars.capitalize.to_s %>: <%= @user.posts.count %><br>
+          <%= (t 'objects.thanks.counted').mb_chars.capitalize.to_s %>: {thankscount}<br>
         </div>
       </div>
       <div class="message">
