--- a/app/assets/stylesheets/default/theme.css.scss
+++ b/app/assets/stylesheets/default/theme.css.scss
@@ -254,17 +254,18 @@ th {
 // Forum list
 
 .forum_container {
-    border: 1px solid #eee;
 }
 
 .metaforum {
     background-color: #888;
     margin-bottom: 5px;
     border: 1px solid #000;
+    padding: 5px;
 }
 
 .forum_data {
     height: 4em;
+    border: 1px solid #888;
 }
 
 .forum {
