refucktoring done, wiped some stubs

--- a/app/views/admin/forum/index.html.erb
+++ b/app/views/admin/forum/index.html.erb
@@ -5,6 +5,7 @@
 
 <article>
   <p><%= t 'admin.forum.index.desc' %></p>
+  <p><%= t 'admin.messages.keep_translations_clean' %></p>
   <div class="rightfloat">
     [<%= link_to (t 'common.actions.add', :obj => (t 'objects.metaforum.self')), new_admin_forum_metaforum_path %>]
   </div>
